--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JavaScript Basic Practice </title>
   </head>
+   
+ <h1>Learning From 27 Projects</h1>
+
+
   <body>
     <script src="hoisting.js"></script>
+<script src="basic.js"></script>
+
   </body>
 </html>
